--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,4 +1,19 @@
-@import './base.css';
-@import './font-awesome.min.css';
-@import './layout.css';
-@import './module.css';
+/*
+	Prologue by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+*/
+
+@import url(./base.css);
+@import url(./moduls.css);
+@import url(./state.css);
+@import url(./themes.css);
+@import url(./Layout/layout-container.css);
+@import url(./Layout/layout.css);
+@import url(./Layout/screen-size-layout.css);
+		
+			
+
+		
+
+			
